
name:                sql-driver-race
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              AndrewRademacher
maintainer:          andrewrademacher@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable race
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010

    build-depends:      base                    >=4.7   && <4.8
                    ,   criterion               >=1.0   && <1.1
                    ,   hasql                   >=0.7   && <0.8
                    ,   hasql-postgres          >=0.10  && <0.11
                    ,   postgresql-simple       >=0.4   && <0.5
                    ,   uuid                    >=1.3   && <1.4
                    ,   random                  >=1.1   && <1.2
                    ,   bytestring              >=0.10  && <0.11
